--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -241,26 +241,20 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content border-0 shadow-lg rounded-4 overflow-hidden">
                 <div class="modal-body p-5 text-center">
-                    <div class="status-icon-circle">
-                        <i class="fas fa-exchange-alt fa-2x"></i>
-                    </div>
+                    <div class="status-icon-circle"><i class="fas fa-exchange-alt fa-2x"></i></div>
                     <h4 class="fw-bold mb-2">Status ändern?</h4>
                     <p class="text-muted small mb-4">Möchten Sie den Status dieser Bestellung wirklich aktualisieren?
                     </p>
-
                     <div
                         class="status-change-box d-flex align-items-center justify-content-center gap-3 mb-4 p-3 rounded-3">
-                        <div class="text-center">
-                            <span class="d-block small text-muted text-uppercase fw-bold">VON</span>
-                            <span id="modal-old-status" class="fw-bold text-navy">-</span>
-                        </div>
+                        <div class="text-center"><span
+                                class="d-block small text-muted text-uppercase fw-bold">VON</span><span
+                                id="modal-old-status" class="fw-bold text-navy">-</span></div>
                         <i class="fas fa-arrow-right text-gold"></i>
-                        <div class="text-center">
-                            <span class="d-block small text-muted text-uppercase fw-bold">ZU</span>
-                            <span id="modal-new-status" class="fw-bold text-gold">-</span>
-                        </div>
+                        <div class="text-center"><span
+                                class="d-block small text-muted text-uppercase fw-bold">ZU</span><span
+                                id="modal-new-status" class="fw-bold text-gold">-</span></div>
                     </div>
-
                     <div class="d-flex gap-2">
                         <button type="button" class="btn btn-light w-100 rounded-pill fw-bold"
                             data-bs-dismiss="modal">Abbrechen</button>
@@ -273,7 +267,7 @@
     </div>
 
     <div class="modal fade" id="orderDetailModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-fullscreen-sm-down">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-fullscreen-sm-down">
             <div class="modal-content border-0 shadow-lg rounded-4">
                 <div class="modal-header bg-dark text-white rounded-top-4">
                     <h5 class="modal-title fw-bold">Bestellungsdetails</h5>
