--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,7 +102,9 @@
                         <div class="col-12">
                             <textarea id="revText" class="form-control" rows="3" placeholder="Ihre Bewertung..."
                                 maxlength="500" required></textarea>
-                            <small id="char-count">0 / 500</small>
+                            <div class="d-flex justify-content-end mt-1">
+                                <small id="char-count" class="text-muted">0 / 500</small>
+                            </div>
                         </div>
                         <div class="col-12 text-center">
                             <button type="submit" id="submitReviewBtn"
@@ -156,7 +158,7 @@
                         class="img-fluid rounded shadow-sm insta-img" alt="Minimalist"></div>
                 <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="300"><img
                         src="https://images.unsplash.com/photo-1549298916-b41d501d3772?q=80&w=400&h=400&fit=crop"
-                        class="img-fluid rounded shadow-sm insta-img" alt="Luxe Fashion"></div>
+                        class="img-fluid rounded shadow-sm insta-img" alt="Luxe Fashion 2"></div>
                 <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="400"><img
                         src="https://images.unsplash.com/photo-1483985988355-763728e1935b?q=80&w=400&h=400&fit=crop"
                         class="img-fluid rounded shadow-sm insta-img" alt="Luxe Life"></div>
@@ -183,7 +185,8 @@
 
                         <div class="mb-4">
                             <h3 id="mPriceDisplay" class="fw-bold mb-1" style="color: var(--gold);"></h3>
-                            <div id="mStockStatus" class="bg-light text-dark fw-bold border"></div>
+                            <div id="mStockStatus"
+                                class="bg-light text-dark fw-bold border p-2 px-3 d-inline-block rounded-1"></div>
                             <div id="mStockWarning" class="text-danger small mt-2 fw-bold" style="display:none;">Limit
                                 erreicht!</div>
                         </div>
