--- a/frontend/login.html
+++ b/frontend/login.html
@@ -15,6 +15,14 @@
 
 <body>
 
+    <div id="preloader">
+        <div class="preloader-content">
+            <div class="preloader-logo">LUXE<span>BERLIN</span></div>
+            <div class="preloader-bar"></div>
+            <p class="preloader-text">Exklusive Mode wird geladen...</p>
+        </div>
+    </div>
+
     <div class="login-container" data-aos="zoom-in" data-aos-duration="1000">
         <div class="login-card">
             <div class="brand-logo" data-aos="fade-down" data-aos-delay="300">LUXE<span>BERLIN</span></div>
@@ -26,7 +34,7 @@
                 <div class="mb-1 text-start small opacity-50 ps-2 mb-2">Passwort</div>
                 <input type="password" id="pass" class="form-control" placeholder="••••••••" required>
 
-                <button type="submit" class="btn btn-login">Internal Access</button>
+                <button type="submit" id="loginBtn" class="btn btn-login">Internal Access</button>
             </form>
 
             <a href="index.html" class="back-link" data-aos="fade-in" data-aos-delay="800">← Zurück zum Shop</a>
@@ -35,75 +43,7 @@
     </div>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        // PRE LOADER LOGIC**
-        window.addEventListener("load", function () {
-            const preloader = document.getElementById("preloader");
-            if (preloader) {
-                setTimeout(() => {
-                    preloader.classList.add("preloader-hidden");
-                    setTimeout(() => {
-                        if (typeof AOS !== 'undefined') {
-                            AOS.init({
-                                duration: 1000,
-                                once: true,
-                                offset: 100,
-                                disableMutationObserver: false
-                            });
-                            AOS.refresh();
-                        }
-                        const adminContent = document.getElementById('adminMainContent');
-                        if (adminContent && localStorage.getItem('adminToken')) {
-                            adminContent.classList.remove('d-none');
-                            setTimeout(() => AOS.refresh(), 100);
-                        }
-                        preloader.style.display = "none";
-                    }, 1000);
-                }, 1200);
-            }
-        });
-    </script>
-
-    <script>
-        // --- DINAMİK API YAPILANDIRMASI ---
-        const API_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
-            ? 'http://localhost:5000/api'
-            : '/api';
-
-        document.getElementById('loginForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-
-            const username = document.getElementById('user').value;
-            const password = document.getElementById('pass').value;
-
-            try {
-                const response = await fetch(`${API_URL}/auth/login`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ username, password })
-                });
-
-                const data = await response.json();
-
-                if (response.ok) {
-                    localStorage.setItem('adminToken', data.token);
-                    window.location.href = 'admin.html';
-                } else {
-                    alert("Zugriff verweigert: " + data.message);
-                }
-            } catch (err) {
-                console.error("Login Fehler:", err);
-                alert("Serververbindung fehlgeschlagen! Lütfen AdBlocker'ı kapatıp tekrar deneyin.");
-            }
-        });
-    </script>
+    <script src="login.js"></script>
 </body>
-<div id="preloader">
-    <div class="preloader-content">
-        <div class="preloader-logo">LUXE<span>BERLIN</span></div>
-        <div class="preloader-bar"></div>
-        <p class="preloader-text">Exklusive Mode wird geladen...</p>
-    </div>
-</div>
 
 </html>
