End-to-End Check

--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -158,6 +158,7 @@
 
     </script>
     <script src="payment.js"></script>
+    <script src="cartSync.js"></script>
 </body>
 <div id="preloader">
     <div class="preloader-content">
