--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -302,6 +302,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="admin.js"></script>
+    <script src="cartSync.js"></script>
 </body>
 
 </html>
