--- a/frontend/index.html
+++ b/frontend/index.html
@@ -223,6 +223,28 @@
         </div>
     </footer>
 
+    <div id="luxe-cookie-banner" class="luxe-cookie-banner" style="display: none;">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-8 mb-3 mb-lg-0 text-start">
+                    <h5 class="fw-bold mb-1">Datenschutz & Cookies 🍪</h5>
+                    <p class="mb-0 small opacity-75">
+                        Wir verwenden Cookies, um Ihr Einkaufserlebnis zu verbessern. Einige sind notwendig, während
+                        andere uns helfen, diese Website und Ihre Erfahrung zu verbessern. Details finden Sie in unserer
+                        <a href="Datenschutz.html"
+                            class="text-white text-decoration-underline">Datenschutzerklärung</a>.
+                    </p>
+                </div>
+                <div class="col-lg-4 text-lg-end">
+                    <button id="btn-cookie-reject" class="btn btn-outline-light btn-sm rounded-pill px-3 me-2">Nur
+                        notwendige</button>
+                    <button id="btn-cookie-accept" class="btn btn-gold btn-sm rounded-pill px-4 fw-bold">Alle
+                        akzeptieren</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="luxe-toast-container"></div>
 
     <a href="https://wa.me/4973449526770?text=Hallo%20LUXE%20BERLIN" class="luxe-whatsapp-float" target="_blank">
@@ -241,9 +263,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="main.js"></script>
-    <script src="cookieConsent.js" defer></script>
     <script src="cartSync.js"></script>
-
 
 </body>
 
