--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -21,7 +21,7 @@
         <div class="preloader-content">
             <div class="preloader-logo">LUXE<span>BERLIN</span></div>
             <div class="preloader-bar"></div>
-            <p class="preloader-text">Exklusive Mode wird geladen...</p>
+            <p class="preloader-text">Exklusive Administration wird geladen...</p>
         </div>
     </div>
 
@@ -63,7 +63,7 @@
                     <div
                         class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-4 gap-3">
                         <h5 class="fw-bold mb-0 text-navy">📈 Verkaufsstatistik</h5>
-                        <div class="btn-group btn-group-sm shadow-sm overflow-hidden" style="max-width: fit-content;">
+                        <div class="btn-group btn-group-sm shadow-sm">
                             <button class="btn btn-outline-dark btn-chart-toggle px-3"
                                 onclick="changeChartMode('daily')">Tag</button>
                             <button class="btn btn-outline-dark btn-chart-toggle px-3"
@@ -72,7 +72,7 @@
                                 onclick="changeChartMode('monthly')">Monat</button>
                         </div>
                     </div>
-                    <div style="height: 300px; min-height: 250px;"><canvas id="salesChart"></canvas></div>
+                    <div style="height: 300px;"><canvas id="salesChart"></canvas></div>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-4 gap-3">
                     <h4 class="fw-bold mb-0">Bestellungsverwaltung</h4>
                     <input type="text" id="orderSearch" class="form-control w-100 w-md-50 rounded-pill"
-                        placeholder="Kunde suchen...">
+                        placeholder="Kunden suchen...">
                 </div>
                 <div class="table-scroll-container">
                     <table class="table table-hover align-middle mb-0">
@@ -108,7 +108,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-4 gap-3">
                     <h4 class="fw-bold mb-0">Rezensionen verwalten</h4>
                     <input type="text" id="reviewSearch" class="form-control w-100 w-md-50 rounded-pill"
-                        placeholder="Yorumda ara...">
+                        placeholder="Rezensionen durchsuchen...">
                 </div>
                 <div class="table-scroll-container">
                     <table class="table table-hover align-middle mb-0">
@@ -134,7 +134,7 @@
                     <h5 id="productFormTitle" class="fw-bold mb-3 text-navy">Produkt verwalten</h5>
                     <form id="productForm">
                         <input type="hidden" id="pId">
-                        <div class="mb-2"><input type="text" id="pName" class="form-control" placeholder="Name"
+                        <div class="mb-2"><input type="text" id="pName" class="form-control" placeholder="Produktname"
                                 required></div>
                         <div class="mb-2"><input type="number" id="pPrice" class="form-control" placeholder="Preis (€)"
                                 step="0.01" required></div>
@@ -164,11 +164,11 @@
                         class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-3 gap-3">
                         <h5 class="fw-bold mb-0">Inventar & Bestand</h5>
                         <input type="text" id="productSearch" class="form-control w-100 w-md-50 rounded-pill"
-                            placeholder="Ürün ara...">
+                            placeholder="Produkte suchen...">
                     </div>
                     <div class="table-scroll-container">
                         <table class="table align-middle mb-0">
-                            <thead class="small text-muted text-uppercase">
+                            <thead>
                                 <tr>
                                     <th>Bild</th>
                                     <th>Name</th>
@@ -194,9 +194,17 @@
 
         <div class="card border-0 shadow-sm rounded-4 mb-4" data-aos="fade-up">
             <div class="card-body p-3 p-md-4">
-                <h5 class="fw-bold mb-3 text-navy">🖥️ Aktivitätsprotokoll</h5>
-                <div class="table-scroll-container" style="max-height: 250px;">
-                    <table class="table table-sm small mb-0">
+                <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-3 gap-3">
+                    <h5 class="fw-bold mb-0 text-navy">🖥️ Aktivitätsprotokoll</h5>
+                    <div class="input-group shadow-sm rounded-pill overflow-hidden" style="max-width: 350px;">
+                        <span class="input-group-text bg-white border-end-0"><i
+                                class="fas fa-search text-muted"></i></span>
+                        <input type="text" id="logSearch" class="form-control border-start-0 ps-0"
+                            placeholder="Admin oder Aktion suchen...">
+                    </div>
+                </div>
+                <div class="table-scroll-container" style="max-height: 350px;">
+                    <table class="table table-sm small mb-0 table-hover">
                         <thead class="bg-light sticky-log-header fw-bold">
                             <tr>
                                 <th>Zeit</th>
@@ -267,13 +275,13 @@
     </div>
 
     <div class="modal fade" id="orderDetailModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered modal-fullscreen-sm-down">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content border-0 shadow-lg rounded-4">
-                <div class="modal-header bg-dark text-white rounded-top-4">
+                <div class="modal-header bg-dark text-white">
                     <h5 class="modal-title fw-bold">Bestellungsdetails</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
-                <div id="modal-content-area" class="modal-body p-3 p-md-4"></div>
+                <div id="modal-content-area" class="modal-body p-4"></div>
             </div>
         </div>
     </div>
