--- a/frontend/success.html
+++ b/frontend/success.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="success.css">
     <style>
         /* Mobil AOS Failsafe */
