--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -58,11 +58,11 @@
         </div>
 
         <div class="row mb-4" data-aos="fade-up">
-            <div class="col-12">
-                <div class="card border-0 shadow-sm rounded-4 p-3 p-md-4">
+            <div class="col-lg-8 mb-4 mb-lg-0">
+                <div class="card border-0 shadow-sm rounded-4 p-3 p-md-4 h-100">
                     <div
                         class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-4 gap-3">
-                        <h5 class="fw-bold mb-0 text-navy">📈 Verkaufsstatistik</h5>
+                        <h5 class="fw-bold mb-0 text-navy">📈 Umsatz & Volumen</h5>
                         <div class="btn-group btn-group-sm shadow-sm">
                             <button class="btn btn-outline-dark btn-chart-toggle px-3"
                                 onclick="changeChartMode('daily')">Tag</button>
@@ -73,6 +73,15 @@
                         </div>
                     </div>
                     <div style="height: 300px;"><canvas id="salesChart"></canvas></div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="card border-0 shadow-sm rounded-4 p-3 p-md-4 h-100">
+                    <h5 class="fw-bold mb-4 text-navy">📊 Bestellstatus</h5>
+                    <div style="height: 300px; position: relative;">
+                        <canvas id="statusChart"></canvas>
+                    </div>
                 </div>
             </div>
         </div>
@@ -310,7 +319,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="admin.js"></script>
-    <script src="cartSync.js"></script>
 </body>
 
 </html>
