--- a/frontend/index.html
+++ b/frontend/index.html
@@ -193,6 +193,34 @@
         </div>
     </section>
 
+    <section class="luxe-payment-showcase border-top">
+        <div class="container text-center">
+            <h6 class="payment-title">UNSERE ZAHLUNGSPARTNER</h6>
+            <div class="payment-brand-grid">
+                <div class="brand-item"><i class="fab fa-cc-stripe"></i></div>
+                <div class="brand-item"><i class="fab fa-cc-visa"></i></div>
+                <div class="brand-item"><i class="fab fa-cc-mastercard"></i></div>
+                <div class="brand-item"><i class="fab fa-cc-paypal"></i></div>
+                <div class="brand-item"><i class="fab fa-cc-apple-pay"></i></div>
+                <div class="brand-item"><i class="fab fa-cc-google-pay"></i></div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="py-5 text-center text-muted small border-top bg-white luxe-footer">
+        <div class="container">
+            <div class="mb-4">
+                <a href="Impressum.html" class="mx-2 text-decoration-none text-muted footer-link">Impressum</a>
+                <a href="Datenschutz.html" class="mx-2 text-decoration-none text-muted footer-link">Datenschutz</a>
+                <a href="Widerruf.html" class="mx-2 text-decoration-none text-muted footer-link">Widerrufsbelehrung</a>
+                <a href="agb.html" class="mx-2 text-decoration-none text-muted footer-link">AGB</a>
+            </div>
+            <p class="mb-1">© 2026 LUXE BERLIN. Alle Rechte vorbehalten.</p>
+            <p class="mb-0">Fragen? <a href="contact.html" class="fw-bold text-decoration-none"
+                    style="color: var(--gold);">Kontaktieren Sie uns</a></p>
+        </div>
+    </footer>
+
     <div id="luxe-floating-cart" class="floating-cart-pill">
         <div class="float-price-info">
             <small>Gesamtbetrag</small>
@@ -257,20 +285,6 @@
             </div>
         </div>
     </div>
-
-    <footer class="py-5 text-center text-muted small border-top bg-white luxe-footer">
-        <div class="container">
-            <div class="mb-4">
-                <a href="Impressum.html" class="mx-2 text-decoration-none text-muted footer-link">Impressum</a>
-                <a href="Datenschutz.html" class="mx-2 text-decoration-none text-muted footer-link">Datenschutz</a>
-                <a href="Widerruf.html" class="mx-2 text-decoration-none text-muted footer-link">Widerrufsbelehrung</a>
-                <a href="agb.html" class="mx-2 text-decoration-none text-muted footer-link">AGB</a>
-            </div>
-            <p class="mb-1">© 2026 LUXE BERLIN. Alle Rechte vorbehalten.</p>
-            <p class="mb-0">Fragen? <a href="contact.html" class="fw-bold text-decoration-none"
-                    style="color: var(--gold);">Kontaktieren Sie uns</a></p>
-        </div>
-    </footer>
 
     <div id="luxe-cookie-banner" class="luxe-cookie-banner" style="display: none;">
         <div class="container">
