--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,7 +158,7 @@
                     <div class="visit-content ps-lg-4">
                         <h2 class="display-6 fw-bold mb-4" style="font-family: 'Playfair Display';">Besuchen Sie unser
                             Ladengeschäft</h2>
-                        <p class="text-muted mb-4">Erleben Sie die Welt von <strong>LUXE BERLIN</strong> und
+                        <p class="text-muted mb-4">Erleben Sie die Welt von <strong>LUXE BERLIN</strong> ve
                             <strong>KOÇYİĞİT GmbH</strong> hautnah. Entdecken Sie exklusive Produkte von <strong>MAGUREX
                                 Care</strong> und <strong>YAŞAM GARDEN</strong> vor Ort.
                         </p>
@@ -207,19 +207,23 @@
         </div>
     </section>
 
-    <footer class="py-5 text-center text-muted small border-top bg-white luxe-footer">
+    <footer class="py-4 text-center text-muted small border-top bg-white luxe-footer">
         <div class="container">
-            <div class="mb-4">
+            <div class="mb-3">
                 <a href="Impressum.html" class="mx-2 text-decoration-none text-muted footer-link">Impressum</a>
                 <a href="Datenschutz.html" class="mx-2 text-decoration-none text-muted footer-link">Datenschutz</a>
                 <a href="Widerruf.html" class="mx-2 text-decoration-none text-muted footer-link">Widerrufsbelehrung</a>
                 <a href="agb.html" class="mx-2 text-decoration-none text-muted footer-link">AGB</a>
             </div>
-            <p class="mb-1">© 2026 LUXE BERLIN. Alle Rechte vorbehalten.</p>
+            <p class="mb-1 opacity-75">© 2026 LUXE BERLIN. Alle Rechte vorbehalten.</p>
             <p class="mb-0">Fragen? <a href="contact.html" class="fw-bold text-decoration-none"
                     style="color: var(--gold);">Kontaktieren Sie uns</a></p>
         </div>
     </footer>
+
+    <button id="luxe-back-to-top" class="luxe-back-to-top" title="Nach oben scrollen">
+        <i class="fas fa-chevron-up"></i>
+    </button>
 
     <div id="luxe-floating-cart" class="floating-cart-pill">
         <div class="float-price-info">
